<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/translucentBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.moviedetail.MovieDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            <ImageView
                android:id="@+id/moviePoster"
                tools:src="@drawable/ic_batman"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:transitionName="@string/transitionNAme"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/movieDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="25dp"
            android:orientation="vertical">

            <TextView
                style="@style/MovieDetailsTitle"
                android:text="@string/movie_details_summary"/>
            <TextView
                android:id="@+id/movieSummary"
                style="@style/MovieDetailsText"
                />

            <TextView
                style="@style/MovieDetailsTitle"
                android:text="@string/movie_details_cast"/>
            <TextView
                android:id="@+id/movieCast"
                style="@style/MovieDetailsText"
                />

            <TextView
                style="@style/MovieDetailsTitle"
                android:text="@string/movie_details_director"/>
            <TextView
                android:id="@+id/movieDirector"
                style="@style/MovieDetailsText"
                />

            <TextView
                style="@style/MovieDetailsTitle"
                android:text="@string/movie_details_year"/>
            <TextView
                android:id="@+id/movieYear"
                style="@style/MovieDetailsText"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/moviePlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appbar"
        android:layout_margin="25dp"
        app:backgroundTint="@color/colorSecondary"
        app:fabSize="auto"
        android:src="@drawable/ic_play_circle_filled_black_24dp"
        app:layout_anchorGravity="bottom|right"/>
</android.support.design.widget.CoordinatorLayout>